--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Title</title>
 		<meta charset="utf-8">
+		<link rel="icon" type="image/gif" href="/assets/avatar.gif?ver=20180803">
 	</head>
 
 	<body>
