--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 	<head>
-		<title>Title</title>
 		<meta charset="utf-8">
+		<title>Title</title>
 		<link rel="icon" type="image/gif" href="/assets/avatar.gif?ver=20180803">
 	</head>
 
