--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -22,6 +22,8 @@
 			font: 16px monospace;
 			outline: none;
 			border: 0;
+			background: #333;
+			color: #fff;
 		}
 	</style>
 	<textarea></textarea>
