--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -26,7 +26,18 @@
 			color: #fff;
 		}
 	</style>
-	<textarea>...</textarea>
-
+	<textarea></textarea>
+	<script>
+		if (typeof(Storage) !== 'undefined') {
+			const autoSaveFrequency = 1000;
+			const editor = document.querySelector('textarea');
+			editor.value = localStorage.getItem('content');
+			setInterval(function() {
+				localStorage.setItem('content', editor.value);
+			}, autoSaveFrequency);
+		} else {
+			console.log('storage nok');
+		}
+	</script>
 </body>
 </html>
