--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -50,7 +50,7 @@
 					localStorage.setItem('content', editor.value);
 				}, autoSaveFrequency);
 			} else {
-				console.log('storage nok');
+				console.log('Local Storage not supported');
 			}
 
 		</script>
