--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -27,11 +27,13 @@
 				width: 100%;
 				height: 100%;
 				padding: 20px;
-				font: 16px monospace;
 				outline: none;
 				border: 0;
 				background: #333;
 				color: #fff;
+				font-size: 28px;
+				font-family: "Lucida Console", Monaco, monospace;
+				font-weight: 200;
 			}
 		</style>
 
