--- a/tools/draw/index.html
+++ b/tools/draw/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Draw</title>
 		<link rel="stylesheet" href="app.css">
+		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 
 	<body>
