--- a/tools/draw/index.html
+++ b/tools/draw/index.html
@@ -19,6 +19,7 @@
 		<nav>
 			<button data-method="color" data-value="limegreen">limegreen</button>
 			<button data-method="color" data-value="crimson">crimson</button>
+			<button data-method="color" data-value="darkturquoise">darkturquoise</button>
 			<button data-method="color" data-value="purple">purple</button>
 			<button data-method="color" data-value="fuchsia">fuchsia</button>
 			<button data-method="color" data-value="blueviolet">blueviolet</button>
