--- a/tools/draw/index.html
+++ b/tools/draw/index.html
@@ -33,7 +33,7 @@
 			<button data-method="clear" data-value="">clear</button>
 		</nav>
 
-		<script src="app.js" defer></script>
+		<script src="app.js"></script>
 
 	</body>
 
