--- a/tools/draw/index.html
+++ b/tools/draw/index.html
@@ -16,16 +16,18 @@
 			<canvas></canvas>
 		</section>
 
-		<nav>
-			<button data-method="color" data-value="limegreen">limegreen</button>
-			<button data-method="color" data-value="crimson">crimson</button>
-			<button data-method="color" data-value="darkturquoise">darkturquoise</button>
-			<button data-method="color" data-value="purple">purple</button>
-			<button data-method="color" data-value="fuchsia">fuchsia</button>
-			<button data-method="color" data-value="blueviolet">blueviolet</button>
-			<button data-method="color" data-value="goldenrod">goldenrod</button>
-			<button data-method="color" data-value="royalblue">royalblue</button>
-			<br>
+		<nav class="colors">
+			<button data-method="color" data-value="limegreen"></button>
+			<button data-method="color" data-value="crimson"></button>
+			<button data-method="color" data-value="darkturquoise"></button>
+			<button data-method="color" data-value="purple"></button>
+			<button data-method="color" data-value="fuchsia"></button>
+			<button data-method="color" data-value="blueviolet"></button>
+			<button data-method="color" data-value="goldenrod"></button>
+			<button data-method="color" data-value="royalblue"></button>
+		</nav>
+
+		<nav class="tools">
 			<button data-method="size" data-value="2">small</button>
 			<button data-method="size" data-value="4">normal</button>
 			<button data-method="size" data-value="10">big</button>
