--- a/tools/draw/index.html
+++ b/tools/draw/index.html
@@ -25,13 +25,13 @@
 			<button data-method="color" data-value="blueviolet"></button>
 			<button data-method="color" data-value="goldenrod"></button>
 			<button data-method="color" data-value="royalblue"></button>
+			<button data-method="color" data-value="olivedrab"></button>
 		</nav>
 
 		<nav class="tools">
 			<button data-method="size" data-value="2">small</button>
 			<button data-method="size" data-value="4">normal</button>
 			<button data-method="size" data-value="10">big</button>
-			<br>
 			<button data-method="clear" data-value="">clear</button>
 		</nav>
 
