--- a/slides/index.html
+++ b/slides/index.html
@@ -11,7 +11,11 @@
 	<body>
 
 		<div class="wrapper">
-			<main></main>
+			<main>
+				<ul>
+					<li><a href="#basic-math-in-programming">Basic math in programming</a></li>
+				</ul>
+			</main>
 			<nav></nav>
 		</div>
 
