--- a/slides/index.html
+++ b/slides/index.html
@@ -12,9 +12,12 @@
 
 		<div class="wrapper">
 			<main>
-				<ul>
-					<li><a href="#basic-math-in-programming">Basic math in programming</a></li>
-				</ul>
+				<section>
+					<h3>Presentation list</h3>
+					<ul>
+						<li><a href="#basic-math-in-programming">Basic math in programming</a></li>
+					</ul>
+				</section>
 			</main>
 			<nav></nav>
 		</div>
