--- a/slides/index.html
+++ b/slides/index.html
@@ -15,7 +15,7 @@
 				<section>
 					<h3>Presentation list</h3>
 					<ul>
-						<li><a href="#basic-math-in-programming">Basic math in programming</a></li>
+						<li><a href="#basic-math-in-programming" target="_blank">Basic math in programming</a></li>
 					</ul>
 				</section>
 			</main>
