--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
+<head>
 
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<title>Editor</title>
+	<title>Editor</title>
 
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<style>
-			article {
-				display: block;
-				position: fixed;
-				left: 0;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				padding: 40px;
-				outline: none;
-				border: 0;
-				background: #333;
-				color: #fff;
-				font-size: 28px;
-				font-family: "Lucida Console", Monaco, monospace;
-				font-weight: 200;
-			}
-		</style>
+	<style>
+		article {
+			display: block;
+			position: fixed;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			padding: 40px;
+			outline: none;
+			border: 0;
+			background: #222;
+			color: #fff;
+			font-size: 28px;
+			font-family: Monaco, monospace;
+			font-weight: 200;
+			overflow: auto;
+		}
+	</style>
 
-		<article contenteditable></article>
+	<article contenteditable></article>
 
-		<script>
+	<script>
 
+		window.addEventListener('load', (evt) => {
 			const autoSaveFrequency = 1000;
 			const editor = document.querySelector('article');
 
-			if (typeof(Storage) !== 'undefined') {
+			editor.addEventListener('paste', function (evt) {
+				evt.preventDefault();
+				document.execCommand('insertHTML', false, evt.clipboardData.getData('text/plain'));
+			});
+
+			if (typeof (Storage) !== 'undefined') {
 				editor.innerHTML = sessionStorage.getItem('content');
 
-				setInterval(function() {
+				setInterval(function () {
 					sessionStorage.setItem('content', editor.innerHTML);
 				}, autoSaveFrequency);
 
 			} else {
 				console.log('Local Storage not supported');
 			}
+		});
 
-		</script>
+	</script>
 
-	</body>
+</body>
+
 </html>
