added padding and yellow background when text selected

--- a/tools/editor/index.html
+++ b/tools/editor/index.html
@@ -24,7 +24,7 @@
 			top: 0;
 			right: 0;
 			bottom: 0;
-			padding: 80px;
+			padding: 70px;
 			outline: none;
 			border: 0;
 			background: #222;
@@ -32,8 +32,10 @@
 			font-size: 28px;
 			font-family: Monaco, monospace;
 			font-weight: 200;
+			line-height: 130%;
 			overflow: auto;
 		}
+		::selection { background:#ff0; color:#000 }
 	</style>
 
 	<article contenteditable></article>
