--- a/themes/bare/openring/openring.html
+++ b/themes/bare/openring/openring.html
@@ -1,5 +1,5 @@
 <section class="mb-10">
-  <h2 class="text-2xl font-bold mb-6">Articles from blogs I follow around the net</h2>
+  <h2 class="text-2xl font-semibold mb-6">Articles from blogs I follow around the net</h2>
 
   <section>
     {{ range .Articles }}
@@ -7,7 +7,8 @@
       <a href="{{ .Link }}" target="_blank" rel="noopener" class="font-medium mb-1 hover:bg-yellow-100">{{ .Title }}</a>
       <p class="mb-1 text-sm text-gray-600">{{ .Summary }}</p>
       <div class="text-gray-500 font-medium text-xs">
-        Via <a href="{{ .SourceLink }}" class="underline">{{ .SourceTitle }}</a> on {{ .Date | datef "January 2, 2006" }}
+        Via <a href="{{ .SourceLink }}" class="underline">{{ .SourceTitle }}</a> on {{ .Date | datef "January 2, 2006"
+        }}
       </div>
     </article>
     {{ end }}
