--- a/themes/simple/openring/openring.html
+++ b/themes/simple/openring/openring.html
@@ -1,11 +1,11 @@
 <section class="mb-10">
   <h2 class="text-2xl font-bold mb-6">Articles from blogs I follow around the net</h2>
 
-  <section>
+  <section class="grid md:grid-cols-2 gap-10">
     {{ range .Articles }}
-    <article class="mb-6">
-      <a href="{{ .Link }}" target="_blank" rel="noopener" class="font-medium mb-1 hover:bg-yellow-100">{{ .Title }}</a>
-      <p class="mb-1 text-sm text-gray-600">{{ .Summary }}</p>
+    <article class="flex flex-col gap-1">
+      <a href="{{ .Link }}" target="_blank" rel="noopener" class="font-medium rounded underline">{{ .Title }}</a>
+      <p class="text-sm text-gray-600">{{ .Summary }}</p>
       <div class="text-gray-500 font-medium text-xs">
         Via <a href="{{ .SourceLink }}" class="underline">{{ .SourceTitle }}</a>
         on {{ .Date | datef "January 2, 2006" }}
