Added Vercel analytics

--- a/public/debian-based-riced-up-distribution-for-developers-and-devops-folks.html
+++ b/public/debian-based-riced-up-distribution-for-developers-and-devops-folks.html
@@ -136,4 +136,6 @@ SHA256: 360e12d064f6579695f1e627ce34cb2f0… — <a href=https://jcs.org/>joshua
 at <a href=mailto:m@mitjafelicijan.com>m@mitjafelicijan.com</a> or
 catch up with me <a href=https://telegram.me/mitjafelicijan target=_blank>on Telegram</a>.<hr><p>This website does not track you. Content is made available under
 the <a href=https://creativecommons.org/licenses/by/4.0/ target=_blank rel=noreferrer>CC BY 4.0 license</a> unless specified
-otherwise. Blog is also available as <a href=/index.xml target=_blank>RSS feed</a>.</footer>
+otherwise. Blog is also available as <a href=/index.xml target=_blank>RSS feed</a>.</footer><script>
+	 window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+	</script><script defer src=/_vercel/insights/script.js></script>
