Changed default email to gmail one

--- a/public/development-environments-with-nix.html
+++ b/public/development-environments-with-nix.html
@@ -47,7 +47,7 @@ wikipedia-1.0.sit
 source code
 and THINK C 5 project file)
 SHA256: 360e12d064f6579695f1e627ce34cb2f0… — <a href=https://jcs.org/>joshua stein</a></ul><p><a href=https://git.sr.ht/~sircmpwn/openring>Generated with openring.</a></section><footer><hr><p><big><strong>Want to comment or have something to add?</strong></big><p>You can write me an email
-at <a href=mailto:m@mitjafelicijan.com>m@mitjafelicijan.com</a> or
+at <a href=mailto:mitja.felicijan@gmail.com>mitja.felicijan@gmail.com</a> or
 catch up with me <a href=https://telegram.me/mitjafelicijan target=_blank>on Telegram</a>.<hr><p>This website does not track you. Content is made available under
 the <a href=https://creativecommons.org/licenses/by/4.0/ target=_blank rel=noreferrer>CC BY 4.0 license</a> unless specified
 otherwise. Blog is also available as <a href=/index.xml target=_blank>RSS feed</a>.</footer><script>
